almost done with dialog function, working on action enum parser

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Vincent Stakenburg <vincentstakenburg@gmail.com>"]
 
 [dependencies]
 gdk = "^0"
+clap = "2"
 
 [dependencies.gtk]
 version = "0.3.0"
