--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Vincent Stakenburg <vincentstakenburg@gmail.com>"]
 
 [dependencies]
+serde_json = "1.0"
 gdk = "^0"
 clap = "2"
 
